# 2022_2_SVAG

./: .clang-format  .gitignore  Makefile  README.md  check_coverage.py  check_valgrind_report.sh  run_coverage.sh  test_frontend.sh
.github/workflows/: ci.yml
DoIt/: CMakeLists.txt  main.cpp
DoIt/backend/: database_connector.cpp  database_connector.h  database_interaction.cpp  database_interaction.h  server.cpp  server.h  server.hpp  server_main.cpp  talktoclient.cpp  talktoclient.h  talktoclient.hpp
DoIt/build-frontend-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
DoIt/build-frontend-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-4a8b7e49e7724e4fe631.json  cmakeFiles-v1-c49aab24dfbf9b4879a8.json  codemodel-v2-b006b8bafe491377e437.json  directory-.-Debug-929dbd97c6228c225225.json  index-2022-11-21T14-46-54-0870.json  target-frontend-Debug-944ceb034843fbebfaa7.json
DoIt/build-frontend-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-919ad78c4ddf3fdd0c97.json  codemodel-v2-c79b550e5646563f4a69.json  directory-.-Debug-bfec35c0c7b59c3102ed.json  index-2022-11-21T14-45-18-0130.json  target-frontend-Debug-ba5166bc20a37cbdae52.json  target-frontend_autogen-Debug-21b63e38bed9b3e0239f.json  target-frontend_autogen_timestamp_deps-Debug-f2418df4f7204837fe99.json
DoIt/build-frontend-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
DoIt/build-frontend-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
DoIt/build-frontend-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: action_models.cpp.DCBFA188F757A752.idx  action_models.h.A2D320A9E7915D75.idx  board.cpp.1FF40C5ECFC2BFB8.idx  board.h.3F9AE0304F155CF8.idx  main.cpp.818C9159F1158EDA.idx  main_interfaces.h.A8EF665DFCDA7D61.idx  mainwindow.cpp.4D7807F9FB696B1E.idx  mainwindow.h.92D3CCE40264B8D9.idx  menu.cpp.350720D7D44D88DD.idx  menu.h.E1C056F6B1127CE8.idx  user.cpp.6570545ACEE3BF63.idx  user.h.093AE50EF4CE6EB2.idx
DoIt/build-frontend-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/frontend_autogen/: deps
DoIt/build-frontend-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/frontend_autogen/EWIEGA46WW/: moc_mainwindow.cpp
DoIt/database/: BoardDataBase.cpp  BoardDataBase.h  CMakeLists.txt  CardDataBase.cpp  CardDataBase.h  PostgreDataBase.cpp  PostgreDataBase.h  UserDataBase.cpp  UserDataBase.h  allDataBasesInfo.h  database.cpp  database.h
DoIt/frontend/: CMakeLists.txt  action_models.cpp  action_models.h  board.h  main.cpp  main_interfaces.h  mainwindow.cpp  mainwindow.h  manager.cpp  manager.h  menu.cpp  user.cpp  user.h
DoIt/frontend/Client/: client.cpp  client.h  request.h  responce.h
DoIt/frontend/Data/: board.h  card.h  check_list.h  check_list_item.h  column.h  object.h  qboard.h  qcard.h  qcheck_list.h  qcheck_list_item.h  qcolumn.h  qtag.h  quser.h  tag.h  user.h
DoIt/frontend/Gui/: auth_window.cpp  auth_window.h  board_widget.cpp  board_widget.h  boardwidgetmanager.cpp  boardwidgetmanager.h  card_widget.cpp  card_widget.h  column_widget.cpp  column_widget.h  comment.cpp  comment.h  gui_user.cpp  gui_user.h  main_interfaces.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  navbar.cpp  navbar.h  reg_window.cpp  reg_window.h  update.cpp  update.h
DoIt/frontend/GuiData/: gui_board.h  gui_card.h  gui_check_list.h  gui_check_list_item.h  gui_column.h  gui_tag.h  gui_user.h
DoIt/frontend/Lib/: json.hpp
DoIt/frontend/Managers/: data.h  gui_manager.cpp  gui_manager.h  main_manager.cpp  main_manager.h  net_manager.cpp  net_manager.h  uimanager.h  user_manager.cpp  user_manager.h
DoIt/frontend/Test/: CMakeLists.txt  test_frontend.cpp  test_net_worker.cpp
DoIt/frontend/Ui/: board.cpp  board.h  card.cpp  card.h  column.cpp  column.h  comment.cpp  comment.h  main_interfaces.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.h  uidata.h  update.cpp  update.h  user.cpp  user.h  window.cpp  window.h  window.ui
DoIt/frontend/Workers/: gui_worker.cpp  gui_worker.h  net_worker.cpp  net_worker.h
DoIt/tests/: CMakeLists.txt  env_settings.hpp  fill_db.sql  prepare_db.sh  test_frontend.cpp  tests.cpp  tests_database.cpp
DoIt/tests/data/: boards_data.json  cards_data.json  columns_data.json  tags_data.json  users2boards_data.json  users_data.json
linters/: check_after.sh  check_before.sh  check_before_build.sh  run.sh
